# hpp-model

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README.md  TAGS  TAGS-device  TAGS-humanoid  configure.ac  hppModel.pc.in
doc/: Doxyfile.extra.in  Makefile.am  main.hh.in  package.dox.in  porting-to-2.0.hh
doc/additionalDoc/: package.h.in
doc/figures/: classDiagramBody.dot  classDiagramHumanoid.dot  classDiagramJoint.dot  classDiagramRobot.dot
include/: Makefile.am  Makefile.in
include/hpp/model/: anchor-joint.hh  body-distance.hh  body-factory.hh  body.hh  capsule-body-distance.hh  capsule-body-factory.hh  capsule-body.hh  center-of-mass-computation.hh  children-iterator.hh  collision-object.hh  configuration.hh  debug.hh  device.hh  distance-result.hh  eigen.hh  exception.hh  extra-config-space.hh  fcl-to-eigen.hh  freeflyer-joint.hh  fwd.hh  gripper.hh  humanoid-robot.hh  joint-configuration.hh  joint.hh  object-factory.hh  object-iterator.hh  parser.hh  robot-dynamics-impl.hh  rotation-joint.hh  specific-humanoid-robot.hh  translation-joint.hh  types.hh
include/hppModel/: hppBody.h  hppDevice.h  hppHumanoidRobot.h  hppImplRobotDynamics.h  hppImplRobotDynamics.h.in  hppJoint.h  hppJointFreeFlyer.h  hppJointRotation.h  hppJointTranslation.h  hppSpecificHumanoidRobot.h
src/: CMakeLists.txt  Makefile.am  anchor-joint.cc  body-distance.cc  body-factory.cc  body.cc  capsule-body-distance.cc  capsule-body-factory.cc  capsule-body.cc  center-of-mass-computation.cc  check_mesh_file.cc  children-iterator.hh  collision-object.cc  debug.cc  device.cc  freeflyer-joint.cc  gripper.cc  hppBody.cpp  hppDevice.cpp  hppHumanoidRobot.cpp  hppJoint.cpp  hppJointFreeFlyer.cpp  humanoid-robot.cc  joint-configuration.cc  joint.cc  module-dir.hh.in  object-iterator.cc  parser.cc  rotation-joint.cc  translation-joint.cc
tests/: CMakeLists.txt  eigen.cc  load-nao.cc  load-romeo.cc  test-clone.cc  test-configuration.cc  test-tools.hh
unitTesting/: Makefile.am  hppDeviceTest.cpp  hppDeviceTest.h  main.cpp
